hphp/test/zend/good/ext/zlib/tests/gzfilegzreadfile.php.skipif
<?hh /* $Id$ */
if (!extension_loaded("zlib")) print "skip";